--- a/www/ques1.html
+++ b/www/ques1.html
@@ -17,6 +17,6 @@
     <button id="wrong3" onclick="Incorrect3()">Answer C </button><br />
     <button id="right1" onclick="Correct1()">Ayori Selassic </button><br />
     <br />
-    <p>Score: 0000 Nuggets</p>
+    <p id="scoreNuggets">Score: 0000 Nuggets </p>
 </body>
 </html>
