--- a/www/ques3.html
+++ b/www/ques3.html
@@ -6,11 +6,10 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
-    <script src="scripts/bluscript.js"></script>
-   
+
 </head>
 <body>
- <button id="wrong1" onclick="Incorrect()">Answer A  </button><br />
+   <button >Answer A  </button><br />
     <button >Answer B </button><br />
     <button >Answer C </button><br />
     <button >Answer D </button><br />
