color and answers ques1

--- a/www/ques3.html
+++ b/www/ques3.html
@@ -9,11 +9,12 @@
 
 </head>
 <body>
+ <h1>  Question here</h1>
    <button >Answer A  </button><br />
     <button >Answer B </button><br />
     <button >Answer C </button><br />
     <button >Answer D </button><br />
     <br />
-    
+    <p id="scoreNuggets">Score: 0000 Nuggets </p>
 </body>
 </html>
