--- a/www/ques4.html
+++ b/www/ques4.html
@@ -6,19 +6,13 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
-    <script src="scripts/bluscript.js"></script>
-   
+    <script>
+        //
+        // TODO: Write JavaScript code here
+        //
+    </script>
 </head>
 <body>
- <h1>Question here </h1>
- <button id="wrong1" onclick="Incorrect()">Answer A  </button><br />
-    <button >Answer B </button><br />
-    <button >Answer C </button><br />
-    <button >Answer D </button><br />
-    <br />
-    <p id="scoreNuggets">Score: 0000 Nuggets </p>
+    <!-- TODO: Please edit here -->
 </body>
-<style>
-body {
-    background-color:#66ffff;
 </html>
