--- a/www/ques1.html
+++ b/www/ques1.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
     <script src="scripts/bluscript.js"></script>
-        
+   
 </head>
+
 <body>
     <h1> Who founded Pitch Mixer? </h1>
     <h2> An Entrepeneur forum for potential founders of the next big start-ups</h2>
-    <button id="wrong1" onclick="Incorrect()"> Answer A </button><br ?>
-    <button id="wrong2" onclick="Incorrect2()"> George Washington </button><br />
-    <button id="wrong3" onclick="Incorrect3()">Answer C </button><br />
+    <button id="wrong1" onclick="Incorrect()"> Alicia Keys </button><br ?>
+    <button id="wrong2" onclick="Incorrect2()">Janet Jackson</button><br />
+    <button id="wrong3" onclick="Incorrect3()">Mary J. Blidge </button><br />
     <button id="right1" onclick="Correct1()">Ayori Selassic </button><br />
     <br />
     <p id="scoreNuggets">Score: 0000 Nuggets </p>
 </body>
+<style>
+body {
+    background-color:#66ffff;
 </html>
