added a title and then add some photos and finish questions

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,8 @@
     </script>
 </head>
 <body>
-    <a href="ques1.html">LETS GOO</a>
+<h1>Do you know your Black Women Innovaters?</h1>
+    <a href="ques1.html">LET'S TEST YOUR KNOWLEDGE</a>
 </body>
 <style>
 body {
