--- a/www/ques2.html
+++ b/www/ques2.html
@@ -10,12 +10,11 @@
    
 </head>
 <body>
- <h1>Question here </h1>
- <button id="wrong1" onclick="Incorrect()">Answer A  </button><br />
-    <button >Answer B </button><br />
-    <button >Answer C </button><br />
-    <button >Answer D </button><br />
-    <br />
+ <h1>Dr. Shirley Jackson was the first black woman to earn a doctorate from where? </h1>
+ <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
+    <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
+     <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
+    <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
     <p id="scoreNuggets">Score: 0000 Nuggets </p>
 </body>
 <style>
