--- a/www/ques3.html
+++ b/www/ques3.html
@@ -10,11 +10,10 @@
 </head>
 <body>
  <h1>  Question here</h1>
-   <button >Answer A  </button><br />
-    <button >Answer B </button><br />
-    <button >Answer C </button><br />
-    <button >Answer D </button><br />
-    <br />
+    <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
+    <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
+     <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
+    <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
     <p id="scoreNuggets">Score: 0000 Nuggets </p>
 </body>
 </html>
