added a diifferent color finished three questions need to finish 4-6 question add pictures to all pages

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+
+    <link href="https://font.googleapis.com/css?family=Sansita+O1e" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
@@ -20,10 +22,17 @@
     </script>
 </head>
 <body>
-<h1>Do you know your Black Women Innovaters?</h1>
-    <a href="ques1.html">LET'S TEST YOUR KNOWLEDGE</a>
+<h1>Do you know your Black Women Innovators?</h1>
+   
+   <h4> There are 6 questions on black women innovators. Answer each question and try to earn some nuggets in the end. </h4>
+<!--<input type=button onClick="ques1.html" value="LET'S TEST YOUR KNOWLEDGE">-->
+<p><a id="start" href="ques1.html">Lets Test Your Knowledge!</a></p> 
+ <p><a id="nugget" href="style.css"></a></p>
 </body>
 <style>
-body {
-    background-color:#66ffff;
+body
+{ 
+    background-color:#e69900 ;
 </html>
+
+
