--- a/www/ques1.html
+++ b/www/ques1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
-    <script src="scripts/bluscript.js"></script>
+    <script src="scripts/ques1.js"></script>
    
 </head>
 
@@ -22,5 +22,5 @@
 </body>
 <style>
 body {
-    background-color:#66ffff;
+    background-color:#e69900;
 </html>
