--- a/www/ques2.html
+++ b/www/ques2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
-    <script src="scripts/bluscript.js"></script>
+    <script src="scripts/ques2.js"></script>
    
 </head>
 <body>
@@ -16,8 +16,9 @@
      <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
     <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
     <p id="scoreNuggets">Score: 0000 Nuggets </p>
+    <img src="" alt="" />
 </body>
 <style>
 body {
-    background-color:#66ffff;
+    background-color:#e69900 ;
 </html>
