--- a/www/ques3.html
+++ b/www/ques3.html
@@ -6,14 +6,19 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
-
+    <script src="scripts/ques3.js"></script>
 </head>
 <body>
- <h1>  Question here</h1>
-    <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
-    <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
-     <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
-    <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
+ <h1>Who was an African American women who made improvements to the iron and the iron board?</h1>
+    <button id="wrong1" onclick="Correct1()">Sarah Boone </button><br />
+    <button id="right1" onclick="Incorrect()">Lyda Newman </button><br />
+     <button id="wrong2" onclick="Incorrect2()">Madame CJ Walker</button><br />
+    <button id="wrong3" onclick="Incorrect3()">Sarah Goode</button><br />
     <p id="scoreNuggets">Score: 0000 Nuggets </p>
 </body>
+<style>
+body {
+    background-color:#e69900 ;
+}
+</style>
 </html>
