--- a/www/ques5.html
+++ b/www/ques5.html
@@ -6,14 +6,13 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
-    <script src="scripts/ques4.js"></script>   
+    <script src="scripts/ques5.js"></script>   
 </head>
 <body>
-   <h1>  Question here</h1>
-    <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
-    <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
-     <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
-    <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
+ <h1>  Philter Academy is a school of programming for..</h1>
+ <button id="right1" onclick="Correct1()">Women</button><br />
+    <button id="wrong1" onclick="Incorrect()">Men</button><br />
+     
     <p id="scoreNuggets">Score: 0000 Nuggets </p>
 </body>
 </html>
