added background photo and changed the front font and added a shadow animation

--- a/www/index.html
+++ b/www/index.html
@@ -22,17 +22,14 @@
     </script>
 </head>
 <body>
-<h1>Do you know your Black Women Innovators?</h1>
+<h1> Do you know your Black Women Innovators?</h1>
    
    <h4> There are 6 questions on black women innovators. Answer each question and try to earn some nuggets in the end. </h4>
 <!--<input type=button onClick="ques1.html" value="LET'S TEST YOUR KNOWLEDGE">-->
-<p><a id="start" href="ques1.html">Lets Test Your Knowledge!</a></p> 
+<p><a id="start" href="ques1.html">BEGIN</a></p> 
  <p><a id="nugget" href="style.css"></a></p>
+
 </body>
-<style>
-body
-{ 
-    background-color:#e69900 ;
 </html>
 
 
