--- a/www/ques3.html
+++ b/www/ques3.html
@@ -8,13 +8,13 @@
     <script src="components/loader.js"></script>
     <script src="scripts/ques3.js"></script>
 </head>
-<body>
- <h1>Who was an African American women who made improvements to the iron and the iron board?</h1>
+<body background="nuggets.jpg">
+ <h1>Who was an African American women who made improvements to the iron board?</h1>
     <button id="wrong1" onclick="Correct1()">Sarah Boone </button><br />
     <button id="right1" onclick="Incorrect()">Lyda Newman </button><br />
      <button id="wrong2" onclick="Incorrect2()">Madame CJ Walker</button><br />
     <button id="wrong3" onclick="Incorrect3()">Sarah Goode</button><br />
-    <p id="scoreNuggets">Score: 0000 Nuggets </p>
+    <p id="scoreNuggets">Score: 000 Nuggets </p>
 </body>
 <style>
 body {
