--- a/www/ques5.html
+++ b/www/ques5.html
@@ -8,11 +8,11 @@
     <script src="components/loader.js"></script>
     <script src="scripts/ques5.js"></script>   
 </head>
-<body>
+<body background="nuggets.jpg">
  <h1>  Philter Academy is a school of programming for..</h1>
  <button id="right1" onclick="Correct1()">Women</button><br />
     <button id="wrong1" onclick="Incorrect()">Men</button><br />
      
-    <p id="scoreNuggets">Score: 0000 Nuggets </p>
+    <p id="scoreNuggets">Score: 000 Nuggets </p>
 </body>
 </html>
