--- a/www/ques1.html
+++ b/www/ques1.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
     <script src="scripts/ques1.js"></script>
-   
+    <script type="text/javascript">
 </head>
 
-<body>
+<body background="nuggets.jpg">
     <h1> Who founded Pitch Mixer? </h1>
     <h2> An Entrepeneur forum for potential founders of the next big start-ups</h2>
     <button id="wrong1" onclick="Incorrect()"> Alicia Keys </button><br ?>
@@ -18,9 +18,11 @@
     <button id="wrong3" onclick="Incorrect3()">Mary J. Blidge </button><br />
     <button id="right1" onclick="Correct1()">Ayori Selassic </button><br />
     <br />
-    <p id="scoreNuggets">Score: 0000 Nuggets </p>
+    <p id="scoreNuggets">Score: 000 Nuggets </p>
+   
 </body>
-<style>
-body {
-    background-color:#e69900;
+   
+
 </html>
+
+
