--- a/www/ques2.html
+++ b/www/ques2.html
@@ -9,13 +9,13 @@
     <script src="scripts/ques2.js"></script>
    
 </head>
-<body>
- <h1>Dr. Shirley Jackson was the first black woman to earn a doctorate from where? </h1>
+<body background="nuggets.jpg">
+ <h1>Dr. Shirley Ann Jackson was the first black woman to earn a doctorate from where? </h1>
  <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
     <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
      <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
     <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
-    <p id="scoreNuggets">Score: 0000 Nuggets </p>
+    <p id="scoreNuggets">Score: 000 Nuggets </p>
     <img src="" alt="" />
 </body>
 <style>
