--- a/www/ques4.html
+++ b/www/ques4.html
@@ -8,7 +8,7 @@
     <script src="components/loader.js"></script>
     <script src="scripts/ques4.js"></script>   
 </head>
-<body>
+<body background="nuggets.jpg">
    <h1>  Question here</h1>
     <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
     <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
