--- a/www/ques6.html
+++ b/www/ques6.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
     <script src="scripts/ques6.js"></script>   
-   <script>
-        //
-        // TODO: Write JavaScript code here
-        //
-    </script>
 </head>
-<body>
-    <!-- TODO: Please edit here -->
+<body background="nuggets.jpg">
+    <h1> Question </h1>
+    <button id="wrong1" onclick="Incorrect()"> answer a </button><br />
+    <button id="wrong2" onclick="Incorrect2()"> answer b</button><br />
+    <button id="wrong3" onclick="Incorrect3()"> answer c </button><br />
+    <button id="right1" onclick="Correct1()"> answer d </button><br />
+    <br />
+    <p id="scoreNuggets">Score: 000 Nuggets </p>
 </body>
 </html>
