uhh stuff...like...the next page

--- a/www/ques1.html
+++ b/www/ques1.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
     <script src="scripts/ques1.js"></script>
-    <script type="text/javascript">
+    <script type="text/javascript"></script>
 </head>
 
-<body background="nuggets.jpg">
+<body background= "nuggets.jpg">
     <h1> Who founded Pitch Mixer? </h1>
     <h2> An Entrepeneur forum for potential founders of the next big start-ups</h2>
     <button id="wrong1" onclick="Incorrect()"> Alicia Keys </button><br ?>
