--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,9 @@
 </head>
 <body>
 <h1> Greatest Black Minds </h1>
-   <h3> Do you know your african-american women innovators? </h3>
-   <h4> There are 6 questions on black women innovators. Answer each question and try to earn some nuggets in the end. </h4>
-<!--<input type=button onClick="ques1.html" value="LET'S TEST YOUR KNOWLEDGE">-->
+   <h3> Do you know your African-American women innovators? </h3>
+   <h4> There are 6 questions on black women innovators. Answer each question to try and earn some nuggets in the end. </h4>
+<!--<--<input type=button onClick="ques1.html" value="LET'S TEST YOUR KNOWLEDGE">-->
 <p><a id="start" href="ques1.html">BEGIN</a></p> 
  <p><a id="nugget" href="style.css"></a></p>
 
