--- a/www/ques1.html
+++ b/www/ques1.html
@@ -19,6 +19,7 @@
     <button id="right1" onclick="Correct1()">Ayori Selassic </button><br />
     <br />
     <p id="scoreNuggets">Score: 000 Nuggets </p>
+    <p><a id="wrong1" href="styles.css"></a></p>
    
 </body>
    
