--- a/www/ques4.html
+++ b/www/ques4.html
@@ -8,12 +8,17 @@
     <script src="components/loader.js"></script>
     <script src="scripts/ques4.js"></script>   
 </head>
-<body background="nuggets.jpg">
-   <h1>  Question here</h1>
-    <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
-    <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
-     <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
-    <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
-    <p id="scoreNuggets">Score: 0000 Nuggets </p>
+   <h1>In what year did Marie Van Brittan Brown invent the home security system?</h1>
+    <button id="wrong1" onclick="Incorrect()">1969 </button><br />
+    <button id="right1" onclick="Correct1()">1966 </button><br />
+     <button id="wrong2" onclick="Incorrect2()">1970</button><br />
+    <button id="wrong3" onclick="Incorrect3()">1962 </button><br />
+    <img src="mvb.jpg" alt="Picture" />
+    <!--<p id="scoreNuggets">Score: 0000 Nuggets </p>-->
 </body>
+  <style>
+body {
+    background-color:#e69900 ;
+}
+</style> 
 </html>
