--- a/www/ques5.html
+++ b/www/ques5.html
@@ -8,11 +8,19 @@
     <script src="components/loader.js"></script>
     <script src="scripts/ques5.js"></script>   
 </head>
-<body background="nuggets.jpg">
- <h1>  Philter Academy is a school of programming for..</h1>
- <button id="right1" onclick="Correct1()">Women</button><br />
-    <button id="wrong1" onclick="Incorrect()">Men</button><br />
+
+ <h1> Alice H. Parker was an african American woman that made the design of the gas heating furnance</h1>
+ <button id="right1" onclick="Correct1()">True</button><br />
+    <button id="wrong1" onclick="Incorrect()">False</button><br />
+    <img src="ah.jpg" alt="" />
      
-    <p id="scoreNuggets">Score: 000 Nuggets </p>
+    <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
 </body>
+  <style>
+body {
+    background-color:#e69900 ;
+}
+
+}
+</style> 
 </html>
