--- a/www/ques1.html
+++ b/www/ques1.html
@@ -10,7 +10,7 @@
     <script type="text/javascript"></script>
 </head>
 
-<body background= "nuggets.jpg">
+<body>
     <h1> Who founded Pitch Mixer? </h1>
     <h2> An Entrepeneur forum for potential founders of the next big start-ups</h2>
     <button id="wrong1" onclick="Incorrect()"> Alicia Keys </button><br ?>
@@ -18,11 +18,21 @@
     <button id="wrong3" onclick="Incorrect3()">Mary J. Blidge </button><br />
     <button id="right1" onclick="Correct1()">Ayori Selassic </button><br />
     <br />
-    <p id="scoreNuggets">Score: 000 Nuggets </p>
+    <img src="as.jpg" alt="Picture" />
+    <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
+    
     <p><a id="wrong1" href="styles.css"></a></p>
    
 </body>
-   
+   <style>
+body {
+    background-color:#e69900 ;
+}
+img {
+    height: 250px;
+    width: 250px;
+}
+</style> 
 
 </html>
 
