--- a/www/ques2.html
+++ b/www/ques2.html
@@ -9,16 +9,20 @@
     <script src="scripts/ques2.js"></script>
    
 </head>
-<body background="nuggets.jpg">
  <h1>Dr. Shirley Ann Jackson was the first black woman to earn a doctorate from where? </h1>
  <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
     <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
      <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
     <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
-    <p id="scoreNuggets">Score: 000 Nuggets </p>
-    <img src="" alt="" />
+    <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
+    <img src="jackson184.gif" alt="Picture" />
 </body>
 <style>
 body {
     background-color:#e69900 ;
+}
+img { 
+    padding-top: 20px;
+}
+</style>
 </html>
