--- a/www/ques3.html
+++ b/www/ques3.html
@@ -8,17 +8,23 @@
     <script src="components/loader.js"></script>
     <script src="scripts/ques3.js"></script>
 </head>
-<body background="nuggets.jpg">
+
  <h1>Who was an African American women who made improvements to the iron board?</h1>
     <button id="wrong1" onclick="Correct1()">Sarah Boone </button><br />
     <button id="right1" onclick="Incorrect()">Lyda Newman </button><br />
      <button id="wrong2" onclick="Incorrect2()">Madame CJ Walker</button><br />
     <button id="wrong3" onclick="Incorrect3()">Sarah Goode</button><br />
-    <p id="scoreNuggets">Score: 000 Nuggets </p>
+    <img src="sb.jpg" alt="Picture" />
+    <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
 </body>
 <style>
 body {
     background-color:#e69900 ;
+}
+img {
+    padding-top: 20px;
+    height:300px;
+    width:250px;
 }
 </style>
 </html>
