--- a/www/ques6.html
+++ b/www/ques6.html
@@ -8,12 +8,18 @@
     <script src="components/loader.js"></script>
     <script src="scripts/ques6.js"></script>   
 </head>
-<body background="nuggets.jpg">
-    <h1> Question </h1>
-    <button id="wrong1" onclick="Incorrect()"> answer a </button><br />
-    <button id="wrong2" onclick="Incorrect2()"> answer b</button><br />
-    <button id="wrong3" onclick="Incorrect3()"> answer c </button><br />
-    <button id="right1" onclick="Correct1()"> answer d </button><br />
-    <p id="scoreNuggets">Score: 000 Nuggets </p>
+
+    <h1>Who was the first African American woman to have a successful line of hair care products and become a millionaire in America?</h1>
+    <button id="wrong1" onclick="Incorrect()">Patricia Bath </button><br />
+    <button id="wrong2" onclick="Incorrect2()"> Ellis Clarence</button><br />
+    <button id="wrong3" onclick="Incorrect3()">Kerrie Holley </button><br />
+    <button id="right1" onclick="Correct1()">Madame CJ Walker</button><br />
+    <img src="mcjw.png" alt="" />
+    <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
 </body>
+<style>
+    body {
+    background-color:#e69900 ;
+}
+</style>
 </html>
