finished ad checked

--- a/www/ques5.html
+++ b/www/ques5.html
@@ -10,8 +10,10 @@
 </head>
 
  <h1> Alice H. Parker was an african American woman that made the design of the gas heating furnance</h1>
+ <div id="buttons">
  <button id="right1" onclick="Correct1()">True</button><br />
     <button id="wrong1" onclick="Incorrect()">False</button><br />
+    </div>
     <img src="ah.jpg" alt="" />
      
     <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
@@ -21,6 +23,14 @@ body {
     background-color:#e69900 ;
 }
 
+}
+
+#buttons {
+    text-align: center; 
+}
+
+button {
+    width: 50%;
 }
 </style> 
 </html>
