--- a/www/ques1.html
+++ b/www/ques1.html
@@ -13,11 +13,13 @@
 <body>
     <h1> Who founded Pitch Mixer? </h1>
     <h2> An Entrepeneur forum for potential founders of the next big start-ups</h2>
+    <div id="buttons">
     <button id="wrong1" onclick="Incorrect()"> Alicia Keys </button><br ?>
     <button id="wrong2" onclick="Incorrect2()">Janet Jackson</button><br />
     <button id="wrong3" onclick="Incorrect3()">Mary J. Blidge </button><br />
     <button id="right1" onclick="Correct1()">Ayori Selassic </button><br />
     <br />
+    </div>
     <img src="as.jpg" alt="Picture" />
     <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
     
@@ -31,6 +33,15 @@ body {
 img {
     height: 250px;
     width: 250px;
+
+}
+
+#buttons {
+    text-align: center; 
+}
+
+button {
+    width: 50%;
 }
 </style> 
 
