--- a/www/ques2.html
+++ b/www/ques2.html
@@ -10,10 +10,12 @@
    
 </head>
  <h1>Dr. Shirley Ann Jackson was the first black woman to earn a doctorate from where? </h1>
+ <div id="buttons">
  <button id="wrong1" onclick="Incorrect()">Cleveland State University </button><br />
     <button id="right1" onclick="Correct1()">Massachusetts Institute of Technology </button><br />
      <button id="wrong2" onclick="Incorrect2()">Harvard University</button><br />
     <button id="wrong3" onclick="Incorrect3()">DeVry University </button><br />
+    </div>
     <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
     <img src="jackson184.gif" alt="Picture" />
 </body>
@@ -23,6 +25,15 @@ body {
 }
 img { 
     padding-top: 20px;
+}
+
+
+#buttons {
+    text-align: center; 
+}
+
+button {
+    width: 50%;
 }
 </style>
 </html>
