--- a/www/ques3.html
+++ b/www/ques3.html
@@ -10,10 +10,12 @@
 </head>
 
  <h1>Who was an African American women who made improvements to the iron board?</h1>
-    <button id="wrong1" onclick="Correct1()">Sarah Boone </button><br />
-    <button id="right1" onclick="Incorrect()">Lyda Newman </button><br />
+ <div id="buttons">
+    <button id="right1" onclick="Correct1()">Sarah Boone </button><br />
+    <button id="wrong1" onclick="Incorrect()">Lyda Newman </button><br />
      <button id="wrong2" onclick="Incorrect2()">Madame CJ Walker</button><br />
     <button id="wrong3" onclick="Incorrect3()">Sarah Goode</button><br />
+    </div>
     <img src="sb.jpg" alt="Picture" />
     <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
 </body>
@@ -25,6 +27,14 @@ img {
     padding-top: 20px;
     height:300px;
     width:250px;
+}
+
+#buttons {
+    text-align: center; 
+}
+
+button {
+    width: 50%;
 }
 </style>
 </html>
