--- a/www/ques4.html
+++ b/www/ques4.html
@@ -9,16 +9,26 @@
     <script src="scripts/ques4.js"></script>   
 </head>
    <h1>In what year did Marie Van Brittan Brown invent the home security system?</h1>
+   <div id="buttons">
     <button id="wrong1" onclick="Incorrect()">1969 </button><br />
     <button id="right1" onclick="Correct1()">1966 </button><br />
      <button id="wrong2" onclick="Incorrect2()">1970</button><br />
     <button id="wrong3" onclick="Incorrect3()">1962 </button><br />
+    </div>
     <img src="mvb.jpg" alt="Picture" />
     <!--<p id="scoreNuggets">Score: 0000 Nuggets </p>-->
 </body>
   <style>
 body {
     background-color:#e69900 ;
+}
+
+#buttons {
+    text-align: center; 
+}
+
+button {
+    width: 50%;
 }
 </style> 
 </html>
