--- a/www/ques6.html
+++ b/www/ques6.html
@@ -10,16 +10,26 @@
 </head>
 
     <h1>Who was the first African American woman to have a successful line of hair care products and become a millionaire in America?</h1>
-    <button id="wrong1" onclick="Incorrect()">Patricia Bath </button><br />
+   <div id="buttons">
+   <button id="wrong1" onclick="Incorrect()">Patricia Bath </button><br />
     <button id="wrong2" onclick="Incorrect2()"> Ellis Clarence</button><br />
     <button id="wrong3" onclick="Incorrect3()">Kerrie Holley </button><br />
     <button id="right1" onclick="Correct1()">Madame CJ Walker</button><br />
+    </div>
     <img src="mcjw.png" alt="" />
     <!--<p id="scoreNuggets">Score: 000 Nuggets </p>-->
 </body>
 <style>
     body {
     background-color:#e69900 ;
+}
+
+#buttons {
+    text-align: center; 
+}
+
+button {
+    width: 50%;
 }
 </style>
 </html>
