3 slides left to fix guys

--- a/www/ques1.html
+++ b/www/ques1.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <h1> Who founded Pitch Mixer? </h1>
-    <h2> An Entrepeneur forum for potential founders of the next big start-ups</h2>
+    <h1> Who founded the Pitch Mixer? </h1>
+    <h2> Hint: An Entrepeneur forum for potential founders of the next big start-ups.</h2>
     <div id="buttons">
     <button id="wrong1" onclick="Incorrect()"> Alicia Keys </button><br ?>
     <button id="wrong2" onclick="Incorrect2()">Janet Jackson</button><br />
@@ -28,21 +28,46 @@
 </body>
    <style>
 body {
-    background-color:#e69900 ;
+    background-color: #ffcc00 ;
+    border-top-style: dotted;
+    border-bottom-style: dotted;
+    border-color: #861313;
+    border-width: thick;
+    
 }
 img {
     height: 250px;
     width: 250px;
+    display: block;
+    margin: auto;
+}
 
+h1 {
+    text-align: center;
+    text-shadow:-1px 3px #861313;
+}
+
+h2 {
+    
 }
 
 #buttons {
     text-align: center; 
+    font-size: 24px;
 }
 
 button {
     width: 50%;
+    background-color: #861313;
+    font-size: 16px;
+    color: white;
+    border-radius: 8px;
 }
+
+button:active {
+    animation-direction:;
+}
+  
 </style> 
 
 </html>
