--- a/www/ques3.html
+++ b/www/ques3.html
@@ -21,20 +21,33 @@
 </body>
 <style>
 body {
-    background-color:#e69900 ;
+    background-color: #ffcc00 ;
+    border-top-style: dotted;
+    border-bottom-style: dotted;
+    border-color: #861313;
+    border-width: thick;
 }
 img {
     padding-top: 20px;
     height:300px;
     width:250px;
+    display: block;
+    margin: auto;
 }
-
+h1 {
+     text-align: center;
+    text-shadow:-1px 3px #861313;
+}
 #buttons {
     text-align: center; 
 }
 
 button {
     width: 50%;
+     background-color: #861313;
+    font-size: 16px;
+    color: white;
+    border-radius: 8px;
 }
 </style>
 </html>
