--- a/www/ques2.html
+++ b/www/ques2.html
@@ -21,19 +21,35 @@
 </body>
 <style>
 body {
-    background-color:#e69900 ;
+    background-color: #ffcc00 ;
+    border-top-style: dotted;
+    border-bottom-style: dotted;
+    border-color: #861313;
+    border-width: thick;
 }
 img { 
     padding-top: 20px;
+     display: block;
+    margin: auto;
+}
+
+h1 {
+    text-align: center;
+    text-shadow:-1px 2px #861313;
 }
 
 
 #buttons {
     text-align: center; 
+     font-size: 24px; font-size: 24px;
 }
 
 button {
     width: 50%;
+    background-color: #861313;
+    font-size: 16px;
+    color: white;
+    border-radius: 8px;
 }
 </style>
 </html>
