added winner page

--- a/www/ques5.html
+++ b/www/ques5.html
@@ -9,7 +9,7 @@
     <script src="scripts/ques5.js"></script>   
 </head>
 
- <h1> Alice H. Parker was an african American woman that made the design of the gas heating furnance</h1>
+ <h1> Alice H. Parker was an African-American woman that made the design of the gas heating furnace</h1>
  <div id="buttons">
  <button id="right1" onclick="Correct1()">True</button><br />
     <button id="wrong1" onclick="Incorrect()">False</button><br />
@@ -21,16 +21,35 @@
   <style>
 body {
     background-color: #ffcc00 ;
+    border-top-style: dotted;
+    border-bottom-style: dotted;
+    border-color: #861313;
+    border-width: thick;
 }
-
+h1 {
+    text-align: center;
+    text-shadow:-1px 3px white;
 }
 
 #buttons {
     text-align: center; 
 }
-
+img {
+    padding-top: 20px;
+    height:300px;
+    width:250px;
+    display: block;
+    margin: auto;
+}
 button {
     width: 50%;
+    background-color: #861313;
+    font-size: 16px;
+    color: white;
+    border-radius: 8px;
+}
+button:active {
+    animation-direction:;
 }
 </style> 
 </html>
