--- a/www/ques6.html
+++ b/www/ques6.html
@@ -22,14 +22,35 @@
 <style>
     body {
     background-color: #ffcc00 ;
+    border-top-style: dotted;
+    border-bottom-style: dotted;
+    border-color: #861313;
+    border-width: thick;
 }
 
 #buttons {
     text-align: center; 
 }
-
+img {
+    padding-top: 20px;
+    height:300px;
+    width:250px;
+    display: block;
+    margin: auto;
+}
+h1 {
+    text-align: center;
+    text-shadow:-1px 3px white;
+}
 button {
     width: 50%;
+    background-color: #861313;
+    font-size: 16px;
+    color: white;
+    border-radius: 8px;
+}
+button:active {
+    animation-direction:;
 }
 </style>
 </html>
