--- a/www/ques3.html
+++ b/www/ques3.html
@@ -9,7 +9,7 @@
     <script src="scripts/ques3.js"></script>
 </head>
 
- <h1>Who was an African American women who made improvements to the iron board?</h1>
+ <h1>Who was the African-American women who made improvements to the iron board?</h1>
  <div id="buttons">
     <button id="right1" onclick="Correct1()">Sarah Boone </button><br />
     <button id="wrong1" onclick="Incorrect()">Lyda Newman </button><br />
@@ -36,10 +36,14 @@ img {
 }
 h1 {
      text-align: center;
-    text-shadow:-1px 3px #861313;
+    text-shadow:-1px 3px white;
 }
 #buttons {
     text-align: center; 
+}
+h1 {
+    text-align: center;
+    text-shadow:-1px 2px white;
 }
 
 button {
