--- a/www/ques4.html
+++ b/www/ques4.html
@@ -21,14 +21,30 @@
   <style>
 body {
     background-color: #ffcc00 ;
+    border-top-style: dotted;
+    border-bottom-style: dotted;
+    border-color: #861313;
+    border-width: thick;
+    
 }
-
+h1 {
+    text-align: center;
+    text-shadow:-1px 3px white;
+}
 #buttons {
     text-align: center; 
 }
 
 button {
     width: 50%;
+    background-color: #861313;
+    font-size: 16px;
+    color: white;
+    border-radius: 8px;
+}
+
+button:active {
+    animation-direction:;
 }
 </style> 
 </html>
